[project]
name = "llmtitle"
version = "0.1.0"
description = "AI-Powered File Renamer using Google Gemini."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=0.5.0",
    "pypdf>=4.0.0",
    "tinytag>=2.1.2",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
]

[project.scripts]
llmtitle = "llmtitle.cli:main"

[project.optional-dependencies]
test = ["pytest", "unittest-xml-reporting"]

[tool.setuptools.packages.find]
where = ["src"]
